fix: fixed scrolling issues on mobile

--- a/queries.css
+++ b/queries.css
@@ -257,6 +257,7 @@
 /*************************/
 
 @media (max-width: 34em) {
+
     .header {
         height: 5.5rem;
     }
@@ -274,10 +275,10 @@
         background-color: rgba(255, 255, 255, 0.9);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(10px);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     transform: translateX(100%);
     display: flex;
